# robot_obstacle_avoidance

./: .dockerignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
examples/: sample_runs.txt
src/robot_obstacle_avoidance/: __init__.py  __main__.py  cli.py  environment.py  geometry.py  metrics.py  models.py  scenarios.py  simulation.py  visualization.py  webapp.py
src/robot_obstacle_avoidance/algorithms/: __init__.py  a_star.py  apf.py  base.py  dwa.py
src/robot_obstacle_avoidance/static/: app.js  styles.css
src/robot_obstacle_avoidance/templates/: index.html
tests/: test_environment.py  test_geometry.py  test_simulation.py  test_visualization.py  test_webapp.py
